--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./public/favicon-32x32.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property='og:title' content='Giorgi Patsia`s Portfolio' />
+  <meta property='og:url' content='https://portfolio-nu-gray-28.vercel.app/' />
+  <meta name="image" property="og:image"
+    content="https://res.cloudinary.com/dimy1fj2c/image/upload/v1699216255/cyupo1uimhannwl5djxm.png">
+  <meta name="description" property="og:description" content="Giorgi Patsia`s Portfolio">
+  <meta name="author" content="Giorgi Patsia">
+  <title>Giorgi Patsia</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
